small spacing fix

--- a/Creator Owned Comics/folder.css
+++ b/Creator Owned Comics/folder.css
@@ -6,7 +6,7 @@
 
 #publinks{
     margin-top: -2px;
-    width: 180px;
+    width: 249px;
 }
 
 
